browser/metro/theme/browser.css
/* ... */
#
startui
-
page
{
overflow
-
x
:
scroll
;
overflow
-
y
:
hidden
;
height
:
100
%
;
}
#
startui
-
body
{
height
:
100
%
;
margin
:
0
;
}
#
start
-
container
{
height
:
100
%
;
}
#
urlbar
-
autocomplete
[
viewstate
=
"
snapped
"
]
#
urlbar
-
autocomplete
[
viewstate
=
"
portrait
"
]
{
-
moz
-
box
-
orient
:
vertical
;
}
#
start
-
container
[
viewstate
=
"
snapped
"
]
#
start
-
container
[
viewstate
=
"
portrait
"
]
{
width
:
100
%
;
max
-
width
:
100
%
;
/
*
ensure
page
doesn
'
t
expand
messing
up
media
rules
*
/
height
:
auto
;
}
#
start
-
container
[
viewstate
=
"
snapped
"
]
.
meta
-
section
:
not
(
[
expanded
]
)
>
richgrid
{
visibility
:
collapse
;
}
#
autocomplete
-
overlay
{
display
:
none
;
background
-
color
:
black
;
opacity
:
.
3
;
position
:
fixed
;
top
:
0
;
left
:
0
;
right
:
0
;
bottom
:
0
;
}
#
stack
[
autocomplete
]
>
#
page
>
#
content
-
viewport
>
#
autocomplete
-
overlay
{
display
:
-
moz
-
box
;
}
/
*
Browser
Content
Areas
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
=
*
/
/
*
a
'
margin
-
top
'
is
applied
dynamically
in
ContentAreaObserver
*
/
#
browsers
{
background
:
white
;
transition
-
property
:
margin
-
top
;
transition
-
duration
:
.
3s
;
transition
-
timing
-
function
:
ease
-
in
-
out
;
}
#
browsers
browser
{
/
*
unset
padding
-
bottom
immediately
*
/
transition
-
duration
:
0s
;
transition
-
delay
:
0s
;
transition
-
property
:
padding
-
bottom
;
}
/
*
Selection
overlay
and
monocles
*
/
#
page
.
selection
-
overlay
{
-
moz
-
stack
-
sizing
:
ignore
;
}
.
selection
-
overlay
{
pointer
-
events
:
none
;
}
.
selection
-
overlay
:
-
moz
-
focusring
{
outline
:
0
!
important
;
}
.
selection
-
overlay
-
hidden
{
display
:
none
;
}
.
selectionhandle
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
selection
-
monocle
.
png
"
)
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
18px
18px
;
padding
:
0px
;
margin
-
top
:
-
19px
;
margin
-
left
:
-
9px
;
pointer
-
events
:
auto
;
}
media
(
min
-
resolution
:
min_res_140pc
)
{
/
*
Load
140
%
image
when
scaled
by
140
%
*
/
.
selectionhandle
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
selection
-
monocle
1
.
4x
.
png
"
)
;
}
}
media
(
min
-
resolution
:
min_res_180pc
)
{
/
*
Load
180
%
image
when
scaled
by
180
%
*
/
.
selectionhandle
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
selection
-
monocle
1
.
8x
.
png
"
)
;
}
}
/
*
content
scrollbars
*
/
.
scroller
{
opacity
:
0
;
background
-
color
:
rgba
(
0
0
0
0
.
4
)
!
important
;
-
moz
-
border
-
top
-
colors
:
none
!
important
;
-
moz
-
border
-
bottom
-
colors
:
none
!
important
;
-
moz
-
border
-
right
-
colors
:
none
!
important
;
-
moz
-
border
-
left
-
colors
:
none
!
important
;
border
-
radius
:
border_radius_tiny
;
border
:
border_width_tiny
solid
rgba
(
255
255
255
0
.
4
)
!
important
;
}
.
scroller
[
panning
]
{
opacity
:
1
;
}
.
scroller
[
orient
=
"
vertical
"
]
{
min
-
width
:
scroller_thickness
;
width
:
scroller_thickness
;
min
-
height
:
scroller_minimum
;
}
.
scroller
[
orient
=
"
horizontal
"
]
{
min
-
height
:
scroller_thickness
;
height
:
scroller_thickness
;
min
-
width
:
scroller_minimum
;
}
#
browsers
[
input
=
"
imprecise
"
]
browser
{
overflow
:
hidden
;
}
/
*
overlay
buttons
*
/
.
overlay
-
button
{
position
:
fixed
;
top
:
50
%
;
margin
-
top
:
-
65px
;
width
:
118px
;
height
:
118px
;
background
-
color
:
hsla
(
210
30
%
10
%
.
2
)
;
background
-
size
:
60px
;
background
-
repeat
:
no
-
repeat
;
background
-
origin
:
padding
-
box
;
background
-
clip
:
padding
-
box
;
border
:
6px
solid
hsla
(
0
0
%
100
%
.
7
)
;
border
-
radius
:
50
%
;
box
-
shadow
:
0
0
0
1px
hsla
(
0
0
%
0
%
.
04
)
0
0
9px
0
hsla
(
0
0
%
0
%
.
1
)
;
transition
-
property
:
left
right
transform
background
-
position
background
-
color
background
-
size
border
-
color
visibility
box
-
shadow
top
;
transition
-
duration
:
550ms
;
transition
-
timing
-
function
:
cubic
-
bezier
(
0
.
1
0
.
9
0
.
2
1
)
;
}
#
overlay
-
back
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
overlay
-
back
.
png
)
;
}
#
overlay
-
plus
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
overlay
-
plus
.
png
)
;
}
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
ltr
)
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
rtl
)
{
left
:
-
70px
;
background
-
position
:
right
6px
center
;
}
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
ltr
)
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
rtl
)
{
right
:
-
70px
;
background
-
position
:
left
6px
center
;
}
#
stack
[
viewstate
=
"
snapped
"
]
>
.
overlay
-
button
#
stack
[
keyboardVisible
]
>
.
overlay
-
button
#
stack
[
autocomplete
]
>
.
overlay
-
button
#
stack
[
fullscreen
]
>
.
overlay
-
button
#
appbar
[
visible
]
~
.
overlay
-
button
.
overlay
-
button
[
disabled
]
{
box
-
shadow
:
none
;
visibility
:
collapse
;
}
#
stack
[
keyboardVisible
]
>
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
ltr
)
#
stack
[
keyboardVisible
]
>
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
rtl
)
#
stack
[
autocomplete
]
>
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
ltr
)
#
stack
[
autocomplete
]
>
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
rtl
)
#
stack
[
fullscreen
]
>
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
ltr
)
#
stack
[
fullscreen
]
>
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
rtl
)
#
appbar
[
visible
]
~
#
overlay
-
back
:
-
moz
-
locale
-
dir
(
ltr
)
#
appbar
[
visible
]
~
#
overlay
-
plus
:
-
moz
-
locale
-
dir
(
rtl
)
#
overlay
-
back
[
disabled
]
:
-
moz
-
locale
-
dir
(
ltr
)
#
overlay
-
plus
[
disabled
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
transform
:
translateX
(
-
60px
)
;
}
/* ... */

