Bug 945260 - Remove overflow:hidden css from an element that is meant to scroll. r=jimm
UltraBlame original commit: 5be6a5d785549a29853a7bfbb6b789993dd05448

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -2184,22 +2184,6 @@ width
 scroller_minimum
 ;
 }
-#
-browsers
-[
-input
-=
-"
-imprecise
-"
-]
-browser
-{
-overflow
-:
-hidden
-;
-}
 /
 *
 overlay
@@ -5520,6 +5504,14 @@ download
 -
 progress
 {
+width
+:
+40px
+;
+height
+:
+40px
+;
 list
 -
 style
@@ -5543,6 +5535,67 @@ navbar
 download
 .
 png
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+40px
+40px
+0px
+)
+;
+}
+#
+download
+-
+progress
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+80px
+40px
+40px
+)
+;
+}
+#
+download
+-
+progress
+:
+active
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+120px
+40px
+80px
 )
 ;
 }
